Fix horizontal scrollbar for Settings/Networks page

--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -101,6 +101,16 @@ a {
     --color-1: theme("colors.brand.redone");
     --color-2: theme("colors.brand.redtwo");
   }
+
+  /* For Webkit-based browsers (Chrome, Safari and Opera) */
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+  /* For IE, Edge and Firefox */
+  .scrollbar-hide {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
 
 /**
